Updating dependcies. Adding Image and Data Folders. Adding some data.

--- a/Notebooks/PHYS 308 - 00 - Jupyter Notebook Basics.ipynb
+++ b/Notebooks/PHYS 308 - 00 - Jupyter Notebook Basics.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## What is a Jupyter Notebook?\n",
     "\n",
-    "A Jupyter Notebook is a web application (it opens in your browser) which allows you to write, save, and share interactive documents which contain text, live code (you can actually run the code within the browser), plots, images, and equations. Jupyter supports three default code languages (Julia, Python, and R) which is where its name comes from. We will focus on python in this course.\n",
+    "A Jupyter Notebook is a web application (it opens in your browser) which allows you to write, save, and share interactive documents which contain text, live code (you can actually run the code within the browser), plots, images, and equations. Jupyter supports three default code languages (Julia, Python, and R) which is where its name comes from. You may also see these notebooks refered to as ipython notebooks but this is a somewhat depricated term. We will focus on python in this course.\n",
     "\n",
     "More info: https://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/what_is_jupyter.html\n",
     "\n",
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"Images/LeoTheLion.jpg\" width=\"240\" height=\"240\" align=\"left\"/>"
+    "<img src=\"../Images/LeoTheLion.jpg\" width=\"240\" height=\"240\" align=\"left\"/>"
    ]
   },
   {
@@ -245,6 +245,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## How to run of the class Jupyter notebooks without installing anything\n",
+    "\n",
+    "As we progress through the class I will post notebooks in Github which can be opened directly through a service called Binder. The github link is below:\n",
+    "\n",
+    "https://github.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1\n",
+    "\n",
+    "Click on the Binder button on github or below to open the notebooks:\n",
+    "\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/master)\n",
+    "\n",
+    "We may use some packages later in the class that do not work in Binder. For these packages you may have to install Anaconda and Jupyter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## How to use Jupyter Notebooks"
    ]
   },
@@ -289,9 +306,13 @@
     "\n",
     "Code cells expect python code and they will interpret and run what you type after your press \"shift enter\"\n",
     "\n",
-    "Markdown cells are where you can write nicely formatted text (like in this current cell) and display it by pressing \"shift enter\". To learn how to edit text using markdown language you can click on \"Help\" then \"Markdown\".\n",
-    "\n",
-    "\n",
+    "Markdown cells are where you can write nicely formatted text (like in this current cell) and display it by pressing \"shift enter\". To learn how to edit text using markdown language you can click on \"Help\" then \"Markdown\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Jupyter notebooks also allow you to navigate and create new cells using your keyboard and not your mouse.\n",
     "\n",
     "When a cell is highlighted in <font color=green>green</font>  you are in \"Edit Mode\" and you can type and write code within the cell. To enter Edit Mode you just have to click on a cell with your mouse or move to it using your arrow keys and press \"Enter\"\n",
@@ -385,6 +406,18 @@
     "If you are having big problems (lots of errors) you may want to try doing Kernel->Restart.\n",
     "\n",
     "When you are done working, save your Notebook (as discussed above) and click \"File\"->\"Close and Halt\" (otherwise your notebook will keep running in the background even if you close the window.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "<br>\n",
+    "<font color=blue>**Dealing with error messages**</font> \n",
+    "\n",
+    "The Jupyter notebook will display standard python error messages. Generally these messages contain a line number where the interpeter thinks the error is coming from. Therefore I would recommmend turning on line numbers in Jupyter by going to \"View\"->\"Toggle Line Numbers\""
    ]
   },
   {
