Adding N3, HW1, updating N2 and N1

--- a/Notebooks/PHYS 308 - 01 - Python Tutorial - Part A.ipynb
+++ b/Notebooks/PHYS 308 - 01 - Python Tutorial - Part A.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,12 +197,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Physics is fun\n",
+      "\n",
+      "\tSo is writing python code\n",
+      "\n",
+      "Physics+Math+Coding\n",
+      "\n",
+      "\t= Fun\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Physics is fun\",end=\"\\n\")\n",
+    "print(\"\")\n",
+    "print(\"\\tSo is writing python code\",end=\"\\n\\n\")\n",
+    "print(\"Physics\",\"Math\",\"Coding\",sep=\"+\",end=\"\\n\\n\")\n",
+    "print(\"\\t= Fun\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,6 +391,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "g=h=j=6"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": true
@@ -521,10 +550,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0536066132117812e-34\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = 6.62e-34\n",
+    "pi=3.14159\n",
+    "h_bar = h/(2*pi)\n",
+    "print(h_bar)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -691,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -703,16 +745,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(a))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -724,16 +774,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(b)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -745,16 +806,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(c)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -768,35 +840,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(d)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Determine the type of g\n",
-    "example_float = 15.0\n",
+    "example_float = 15.5\n",
+    "\n",
     "example_int = 5\n",
     "g = example_float + example_int"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(g)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -890,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -906,16 +1001,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type(b_int) =  <class 'int'>\n",
+      "b_int =  -59\n",
+      "type(c_int) =  <class 'int'>\n",
+      "c_int =  23\n",
+      "type(d_int) =  <class 'int'>\n",
+      "d_int =  100\n"
+     ]
+    }
+   ],
+   "source": [
+    "b_int = int(b_float)\n",
+    "print(\"type(b_int) = \",type(b_int))\n",
+    "print(\"b_int = \",b_int)\n",
+    "\n",
+    "c_int = int(c_float)\n",
+    "print(\"type(c_int) = \",type(c_int))\n",
+    "print(\"c_int = \",c_int)\n",
+    "\n",
+    "d_int = int(d_float)\n",
+    "print(\"type(d_int) = \",type(d_int))\n",
+    "print(\"d_int = \",d_int)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -931,15 +1049,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "e_str = str(e_int)\n",
+    "f_str = str(f_float)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#see what happens when you try to add e_str and f_str \n",
@@ -948,16 +1073,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94-3.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "mytext = e_str+f_str\n",
+    "print(mytext)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -970,10 +1104,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'hello'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-256234a4d32c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mh_float\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh_int\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mk_float\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'hello'"
+     ]
+    }
+   ],
+   "source": [
+    "h_float= float(h_int)\n",
+    "k_float=float(k_str)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -993,14 +1142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter the value of x: 7\n"
+      "Please enter the value of x: 25\n"
      ]
     }
    ],
@@ -1010,14 +1159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "25\n"
      ]
     }
    ],
@@ -1027,11 +1176,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(x)    # what type is this?"
    ]
@@ -1045,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1056,22 +1214,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(y)"
    ]
@@ -1144,25 +1317,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the value of x: f\n"
+      "Enter the value of x: hello\n"
      ]
     },
     {
      "ename": "ValueError",
-     "evalue": "could not convert string to float: 'f'",
+     "evalue": "could not convert string to float: 'hello'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-288c487dd2c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter the value of x: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# you will get an error if you feed in a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'f'"
+      "\u001b[0;32m<ipython-input-46-288c487dd2c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter the value of x: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# you will get an error if you feed in a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'hello'"
      ]
     }
    ],
@@ -1415,15 +1588,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test if the following numbers are even or oddd\n",
     "#   4045\n",
-    "# -44"
+    "# -44\n",
+    "#4045%2\n",
+    "-44%2"
    ]
   },
   {
@@ -1475,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1999,7 @@
        "1.0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +2019,7 @@
        "1.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +2190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "python can not rearrange an equation"
+    "python cannot rearrange an equation"
    ]
   },
   {
@@ -2241,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2256,6 +2440,7 @@
    "source": [
     "x,y = 3,4\n",
     "print(x,y)\n",
+    "\n",
     "x,y = y,x   # swap variables ( more challanging in other languages)\n",
     "print(x,y)"
    ]
@@ -2276,16 +2461,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the height of the tower: 3\n",
-      "Enter the time interval: 3\n",
-      "The height of the ball is -41.1 meters\n"
+      "Enter the height of the tower: 100\n",
+      "Enter the time interval: 6\n",
+      "The ball has fallen 176.4 meters\n",
+      "The height of the ball is -76.4 meters\n"
      ]
     }
    ],
@@ -2293,6 +2479,38 @@
     "h=float(input(\"Enter the height of the tower: \"))\n",
     "t=float(input(\"Enter the time interval: \"))\n",
     "s= (1/2)*9.8*t**2    # 1/2 g t^2\n",
+    "print(\"The ball has fallen\",s,\"meters\")\n",
+    "print(\"The height of the ball is\",h-s,\"meters\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same code but using a variable to store the acceleration due to gravity. This makes the code easier to read and you only need to define it once and you can use it many times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the height of the tower in meters: 2\n",
+      "Enter the time interval in seconds: 1\n",
+      "The height of the ball is -2.9000000000000004 meters\n"
+     ]
+    }
+   ],
+   "source": [
+    "h=float(input(\"Enter the height of the tower in meters: \"))\n",
+    "t=float(input(\"Enter the time interval in seconds: \"))\n",
+    "g = 9.8  #Acceleration due to gravity in m/s^2\n",
+    "s= g*t**2/2   # 1/2 g t^2\n",
+    "print(\"The ball has fallen\",s,\"meters\")\n",
     "print(\"The height of the ball is\",h-s,\"meters\")"
    ]
   },
@@ -2303,13 +2521,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "h=float(input(\"Enter the height of the tower in meters: \"))\n",
-    "t=float(input(\"Enter the time interval in seconds: \"))\n",
-    "g = 9.8  #Acceleration due to gravity in m/s^2\n",
-    "s= g*t**2/2   # 1/2 g t^2\n",
-    "print(\"The height of the ball is\",h-s,\"meters\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
