--- a/Notebooks/PHYS 308 - 02 - Python Tutorial - Part B.ipynb
+++ b/Notebooks/PHYS 308 - 02 - Python Tutorial - Part B.ipynb
@@ -15,7 +15,7 @@
     "* Variable modifiers (x+=1)\n",
     "\n",
     "Today we will cover\n",
-    "* Packages, Modules\n",
+    "* The math package (use this as an introduction to packages and modules)\n",
     "* Lists\n",
     "* if statements\n",
     "* While loops, for loops\n",
@@ -1015,77 +1015,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The if statement\n",
-    "\n",
-    "Do something only if a condition is met (notice the indentation)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a whole number no greater than ten:3\n",
-      "Your number is 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = int(input(\"Enter a whole number no greater than ten: \"))\n",
-    "if x>10:  # if the number is greater than 10, do what comes after the colon and is indented\n",
-    "    \n",
-    "    print(\"You entered a number greater than ten\")\n",
-    "    print(\"Setting the number to 0\")\n",
-    "    x=10\n",
-    "print(\"Your number is\",x)"
+    "_<font color=magenta>----Begin Exercise 02-1----</font> _\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Condition examples\n",
+    "Calculate the magntiude of the vector $\\vec{A}$ = (4, 23, 19) using the formula\n",
     "\n",
-    "* if x==1:     Check if x=1 note the double equals sign  <br>\n",
-    "* if x>1:      Check if x is greater than 1 <br>\n",
-    "* if x>=1:     Check if x is greater or equal to 1 <br>\n",
-    "* if x < 1:      Check if x is less than 1 <br>\n",
-    "* if x<=1:     Check if x is less than or equal to 1 <br>\n",
-    "* if x!=1:     Check if x is not equal to 1 <br>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "if x>=10 or x<1:\n",
-    "    print(\"Your number is too big or too small\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your number is good\n"
-     ]
-    }
-   ],
-   "source": [
-    "if x<10 or x>=1:\n",
-    "    print(\"Your number is good\")"
+    "$|\\vec{A}| = \\sqrt{A_x^2+Z_y^2+A_z^2}$"
    ]
   },
   {
@@ -1096,6 +1035,167 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the math module documentation and use the gcd() function to find the greatest common denominator of 42 and 56"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_<font color=magenta>----End Exercise----</font> _"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The if statement\n",
+    "\n",
+    "Do something only if a condition is met\n",
+    "\n",
+    "**Important note**\n",
+    "- In python indentation is used to separate code blocks\n",
+    "- In the example below the indentend code will only run if the if statement is satisfied\n",
+    "- Different then other languages where brackets are typically used\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a whole number no greater than ten: 55\n",
+      "You entered a number greater than ten\n",
+      "Setting the number to 10\n",
+      "Your number is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Enter a whole number no greater than ten: \"))\n",
+    "if x>10:  # if the number is greater than 10, do what comes after the colon and is indented\n",
+    "    \n",
+    "    print(\"You entered a number greater than ten\")\n",
+    "    print(\"Setting the number to 10\")\n",
+    "    x=10\n",
+    "print(\"Your number is\",x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Condition examples \n",
+    "\n",
+    "(Comparison operators)\n",
+    "\n",
+    "* if x==1:     Check if x=1 note the double equals sign  <br>\n",
+    "* if x>1:      Check if x is greater than 1 <br>\n",
+    "* if x>=1:     Check if x is greater or equal to 1 <br>\n",
+    "* if x < 1:      Check if x is less than 1 <br>\n",
+    "* if x<=1:     Check if x is less than or equal to 1 <br>\n",
+    "* if x!=1:     Check if x is not equal to 1 <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logic operators \n",
+    "\n",
+    "* and: require that two statements are true\n",
+    "* or: require that one statement or the other statement is true\n",
+    "* not: require that something not be true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a whole number between 1 and 10: 33\n",
+      "You entered a number greater than ten or less than one\n",
+      "Setting the number to 10\n",
+      "Your number is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Enter a whole number between 1 and 10: \"))\n",
+    "if x>=10 or x<1:  \n",
+    "    print(\"You entered a number greater than ten or less than one\")\n",
+    "    print(\"Setting the number to 10\")\n",
+    "    x=10\n",
+    "print(\"Your number is\",x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_<font color=magenta>----Begin Exercise 02-2----</font> _"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Write code to check if an inputed number is even and greater than 50."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write code to check if an inputed number is even and not equal to 4, or that it is odd and not equal to 5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "_<font color=magenta>----End Exercise----</font> _"
+   ]
   },
   {
    "cell_type": "code",
@@ -1230,19 +1330,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There is also a function in the math module that can help"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is close to 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import isclose\n",
+    "\n",
+    "if isclose( (1/49.0)*49.0, 1):\n",
+    "    print(\"This is close to 1\")\n",
+    "else:\n",
+    "    print(\"This is not close!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### The while statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a whole number no greater than ten: 34\n",
+      "This is greater than ten. Try again\n",
+      "Enter a whole number no greater than then: 32\n",
+      "This is greater than ten. Try again\n",
+      "Enter a whole number no greater than then: 3\n",
+      "Your number is 3\n"
+     ]
+    }
+   ],
    "source": [
-    "x = int(input(\"Enter a whole number no greater than ten:\"))\n",
+    "x = int(input(\"Enter a whole number no greater than ten: \"))\n",
     "while x>10: # stay in the indent until x is less than 10\n",
     "    print(\"This is greater than ten. Try again\")\n",
-    "    x = int(input(\"Enter a whole number no greater than then:\"))\n",
+    "    x = int(input(\"Enter a whole number no greater than then: \"))\n",
     "print(\"Your number is\",x)"
    ]
   },
@@ -1288,11 +1430,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 this one was not skipped\n",
+      "2 this one was not skipped\n",
+      "3 this one was not skipped\n",
+      "4 this one was not skipped\n",
+      "5\n",
+      "6 this one was not skipped\n",
+      "7 this one was not skipped\n",
+      "8 this one was not skipped\n",
+      "9 this one was not skipped\n",
+      "10 this one was not skipped\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i<10:\n",
@@ -1320,7 +1477,7 @@
    },
    "outputs": [],
    "source": [
-    "Example: even and odd integers\n",
+    "#Example: even and odd integers\n",
     "n = int(input(\"Enter an Integer:\"))\n",
     "if n%2==0:\n",
     "    print(\"even\")\n",
@@ -1337,11 +1494,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n",
+      "144\n",
+      "233\n",
+      "377\n",
+      "610\n",
+      "987\n"
+     ]
+    }
+   ],
    "source": [
     "f1 = 1\n",
     "f2 = 1\n",
@@ -1355,11 +1533,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n",
+      "144\n",
+      "233\n",
+      "377\n",
+      "610\n",
+      "987\n"
+     ]
+    }
+   ],
    "source": [
     "f1, f2 = 1,1\n",
     "while f1<=1000:\n",
@@ -1682,6 +1881,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is also a python tool that allows you to automatically loop so a large range:\n",
+    "\n",
+    "https://docs.python.org/3/library/stdtypes.html#typesseq-range\n",
+    "\n",
+    "range(stop)\n",
+    "\n",
+    "range(start, stop[, step])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1718,6 +1930,112 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "18\n",
+      "16\n",
+      "14\n",
+      "12\n",
+      "10\n",
+      "8\n",
+      "6\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range (20,2,-2):\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(1, 15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 5, 10]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(0, 15, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, -1, -2, -3, -4, -5, -6, -7, -8, -9]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(0, -10, -1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1731,6 +2049,15 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "def square(x):\n",
     "    return x**2"
@@ -1738,11 +2065,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "square(3)"
    ]
@@ -1750,17 +2086,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "f(2,7)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -1776,11 +2108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "factorial(3)"
    ]
