--- a/Notebooks/PHYS 308 - 02 - Python Tutorial - Part B.ipynb
+++ b/Notebooks/PHYS 308 - 02 - Python Tutorial - Part B.ipynb
@@ -18,7 +18,8 @@
     "* The math package (use this as an introduction to packages and modules)\n",
     "* Lists\n",
     "* if statements\n",
-    "* While loops, for loops\n",
+    "* While loops\n",
+    "* for loops\n",
     "* Functions"
    ]
   },
@@ -1494,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1523,12 +1524,12 @@
    "source": [
     "f1 = 1\n",
     "f2 = 1\n",
-    "next = f1+f2\n",
+    "add_previous = f1+f2\n",
     "while f1<=1000:\n",
     "    print(f1)\n",
     "    f1 = f2\n",
-    "    f2 = next\n",
-    "    next = f1+f2"
+    "    f2 = add_previous\n",
+    "    add_previous = f1+f2"
    ]
   },
   {
@@ -2039,6 +2040,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "_<font color=magenta>----Begin Exercise 02-3----</font> _\n",
+    "\n",
+    "Loop over the following list and print out each element of the list. Also print out the total number of entries in the list and the sum of all the elements. Please do this in two ways: \n",
+    "\n",
+    "1. Counting the number of entries and calculating the sum by hand\n",
+    "2. Using the built in functions len() and sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "r = [0.4, 0.5, -0.1, 4.0, -1.2, 5.9, 0.4, 0.5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the range function to loop from -20 to 140 in steps of 2. Print out every iteration except for 2, 8, 10, 12 and 140."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_<font color=magenta>----End Exercise----</font> _"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Defining a function\n"
    ]
   },
@@ -2127,6 +2174,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "_<font color=magenta>----Begin Exercise 02-4----</font> _\n",
+    "\n",
+    "Define a function which calculates the area of a rectangle. Take as input the length and the width. Test it using L = 8 meters and W = 3 meters. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2134,6 +2192,13 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_<font color=magenta>----End Exercise ----</font> _"
+   ]
   }
  ],
  "metadata": {
