Small update to N02

--- a/Notebooks/PHYS 308 - 02 - Python Tutorial - Part B.ipynb
+++ b/Notebooks/PHYS 308 - 02 - Python Tutorial - Part B.ipynb
@@ -515,7 +515,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -954,16 +956,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter r:5\n",
-      "Enter Theta in degrees 30\n",
-      "x = 4.330127018922194 y = 2.4999999999999996\n"
+      "Enter r:10\n",
+      "Enter Theta in degrees 45\n",
+      "x = 7.0710678118654755 y = 7.071067811865475\n"
      ]
     }
    ],
@@ -1025,17 +1027,57 @@
    "source": [
     "Calculate the magntiude of the vector $\\vec{A}$ = (4, 23, 19) using the formula\n",
     "\n",
-    "$|\\vec{A}| = \\sqrt{A_x^2+Z_y^2+A_z^2}$"
+    "$|\\vec{A}| = \\sqrt{A_x^2+A_y^2+A_z^2}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.23606797749979"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sqrt(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|A| = 30.099833886584822\n",
+      "|A| = 30.099833886584822\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sqrt, pow\n",
+    "\n",
+    "Ax = 4\n",
+    "Ay = 23\n",
+    "Az = 19\n",
+    "\n",
+    "A = sqrt(pow(Ax,2)+pow(Ay,2)+pow(Az,2))\n",
+    "print(\"|A| =\",A)\n",
+    "\n",
+    "\n",
+    "A = sqrt(Ax**2+Ay**2+Az**2)\n",
+    "print(\"|A| =\",A)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1046,10 +1088,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import gcd\n",
+    "\n",
+    "gcd(42,56)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1074,14 +1131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a whole number no greater than ten: 55\n",
+      "Enter a whole number no greater than ten: 10\n",
       "You entered a number greater than ten\n",
       "Setting the number to 10\n",
       "Your number is 10\n"
@@ -1090,8 +1147,7 @@
    ],
    "source": [
     "x = int(input(\"Enter a whole number no greater than ten: \"))\n",
-    "if x>10:  # if the number is greater than 10, do what comes after the colon and is indented\n",
-    "    \n",
+    "if x==10:  # if the number is greater than 10, do what comes after the colon and is indented\n",
     "    print(\"You entered a number greater than ten\")\n",
     "    print(\"Setting the number to 10\")\n",
     "    x=10\n",
@@ -1127,17 +1183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a whole number between 1 and 10: 33\n",
-      "You entered a number greater than ten or less than one\n",
-      "Setting the number to 10\n",
-      "Your number is 10\n"
+      "Enter a whole number between 1 and 10: 5\n",
+      "Your number is 5\n"
      ]
     }
    ],
@@ -1168,16 +1222,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a even number greater than 50. You inputed: 53\n",
+      "No try again\n",
+      "Your number is 53\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Enter a even number greater than 50. You inputed: \"))\n",
+    "if x%2!=0 or x<50:  \n",
+    "    print(\"No try again\")\n",
+    "print(\"Your number is\",x)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Write code to check if an inputed number is even and not equal to 4, or that it is odd and not equal to 5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a even number not equal to 4 or an odd number not equal to 5. You inputed: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Enter a even number not equal to 4 or an odd number not equal to 5. You inputed: \"))\n",
+    "if (x%2==0 and x!=4) or (x%2!=0 and x!=5):  \n",
+    "    print(\"Good job your number is\",x)\n"
    ]
   },
   {
@@ -1216,14 +1304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a whole number no greater than ten:3\n",
+      "Enter a whole number no greater than ten: 5\n",
       "Your number is okay\n"
      ]
     }
@@ -1238,15 +1326,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a whole number no greater than ten:3\n",
-      "Your number is okay\n"
+      "Enter a whole number no greater than ten: 55\n",
+      "Your number is too big\n"
      ]
     }
    ],
@@ -1309,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1365,19 +1453,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a whole number no greater than ten: 34\n",
+      "Enter a whole number no greater than ten: 100\n",
       "This is greater than ten. Try again\n",
-      "Enter a whole number no greater than then: 32\n",
+      "Enter a whole number no greater than then: 200\n",
       "This is greater than ten. Try again\n",
-      "Enter a whole number no greater than then: 3\n",
-      "Your number is 3\n"
+      "Enter a whole number no greater than then: 5\n",
+      "Your number is 5\n"
      ]
     }
    ],
@@ -1400,15 +1488,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a whole number no greater than ten or a number equal to 999:4\n",
-      "Your number is 4\n"
+      "Enter a whole number no greater than ten or a number equal to 999:100\n",
+      "This is greater than ten. Try again\n",
+      "Enter a whole number no greater than then:500\n",
+      "This is greater than ten. Try again\n",
+      "Enter a whole number no greater than then:999\n",
+      "Your number is 999\n"
      ]
     }
    ],
@@ -1431,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -1807,11 +1899,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.5, 4.2, 3.1]\n"
+     ]
+    }
+   ],
    "source": [
     "r.append(1.0)\n",
     "r.append(1.5)\n",
@@ -1822,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -1833,11 +1931,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.5, 4.2, 3.1]\n",
+      "[1.0, 1.5, 4.2]\n"
+     ]
+    }
+   ],
    "source": [
     "print(r)\n",
     "r.pop()  # remove the last element from a list\n",
@@ -1846,15 +1951,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.5, 4.2]\n",
+      "[1.5, 4.2]\n"
+     ]
+    }
+   ],
    "source": [
     "print(r)\n",
     "r.pop(0)  # remove the 0th element from the list\n",
     "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = [ 0.0, 1.1, 2.1, 3.1, 4.1, 5.1, 6.1, 7.1, 8.1, 9.1, 10.1] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Intro to slicing\n",
+    "\n",
+    "Method to select certain elements of a list (also works for arrays and other objects we will learn later)\n",
+    "\n",
+    "r[A:B] selects all elements of the array between element A of the list and element B of the list, inclusive of A but exclusive of B. In interval notation this is [A,b) or [closed,open)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 1.1, 2.1, 3.1, 4.1, 5.1, 6.1, 7.1, 8.1, 9.1, 10.1]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.1, 2.1]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# last element of list\n",
+    "r[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r[-3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.1, 3.1, 4.1, 5.1, 6.1, 7.1, 8.1, 9.1, 10.1]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Element 2 to the end of the list\n",
+    "r[2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 1.1]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "r[:2]"
    ]
   },
   {
@@ -2044,7 +2339,7 @@
     "\n",
     "Loop over the following list and print out each element of the list. Also print out the total number of entries in the list and the sum of all the elements. Please do this in two ways: \n",
     "\n",
-    "1. Counting the number of entries and calculating the sum by hand\n",
+    "1. By hand: Within the loop keep a running count of the number of list entries and also calculate the sum.\n",
     "2. Using the built in functions len() and sum()"
    ]
   },
